@@ -22,6 +22,7 @@ Bug fixes
 
  * Status button on 'edit page' now links to the correct URL when live and draft slug differ (LB (Ben Johnston))
  * Image title text in the gallery and in the chooser now wraps for long filenames (LB (Ben Johnston), Luiz Boaretto)
+ * Fix: Move image editor action buttons to the bottom of the form on mobile (Julian Gallo)
 
 Upgrade considerations
 ======================
